# ConwaysGameOfLife

./: CMakeLists.txt  README.md
src/: initial_configs.cpp  initial_configs.h  main.cpp
